работа над замечаниями

--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -11,7 +11,7 @@
   transform: translateX(-50%);
   height: 3px;
   background-color: @button-green;
-  top: 37px;
+  top: 39px;
 
   @media (min-width: @tablet-width) {
     top: 83px;
@@ -34,7 +34,7 @@
     padding: 0;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     justify-content: space-between;
     width: 100%;
     padding: 0;
@@ -50,7 +50,7 @@
   width: 280px;
   display: block;
   padding-left: 47px;
-  line-height: 43px;
+  line-height: 42px;
 
   &:active {
     opacity: 0.5;
@@ -136,7 +136,7 @@
   text-transform: none;
   margin: 0;
   padding-top: 24px;
-  padding-bottom: 27px;
+  padding-bottom: 30px;
   padding-left: 20px;
   background-color: white;
 
