--- a/source/less/blocks/form-cat-info.less
+++ b/source/less/blocks/form-cat-info.less
@@ -1,17 +1,23 @@
 .form-cat-info {
   border-bottom: 1px solid #cdcdcd;
-  padding-bottom: 14px;
+  padding-bottom: 17px;
 
   @media (min-width: @tablet-width) {
     padding-top: 25px;
     border-bottom: none;
     padding-bottom: 62px;
+    width: 708px;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
   }
 }
 
 .form-cat-info__item {
   width: 280px;
-  height: 60px;
+  height: 59px;
   .ma;
   display: flex;
   align-items: center;
@@ -19,11 +25,15 @@
   @media (min-width: @tablet-width) {
     width: 630px;
     height: 72px;
+    margin: 0;
+    padding-left: 42px;
+
   }
 
   @media (min-width: @desktop-width) {
     width: 570px;
     margin: 0;
+    padding-left: 0;
   }
 }
 
@@ -33,10 +43,11 @@
   .uppercase;
   font-size: 16px;
   line-height: 39px;
-  margin-left: 15px;
+  margin-left: 17px;
   padding-left: 13px;
   border: 1px solid #e6e6e6;
   color: #444444;
+  height: 41px;
 
   &:hover {
     border: 1px solid #cdcdcd;
@@ -49,8 +60,10 @@
 
 
   @media (min-width: @tablet-width) {
-    line-height: 52px;
+    line-height: 48px;
     font-size: 20px;
-    margin-left: 27px;
+    margin-left: 19px;
+    height: 48px;
+    padding-left: 18px;
   }
 }
