--- a/source/less/blocks/form-targets.less
+++ b/source/less/blocks/form-targets.less
@@ -4,7 +4,7 @@
   padding: 0 20px;
   box-sizing: border-box;
   padding-top: 14px;
-  padding-bottom: 14px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #cdcdcd;
 
   @media (min-width: @tablet-width) {
@@ -58,14 +58,14 @@
 .form-targets__item::before {
   position: absolute;
   content: "";
-  width: 28px;
-  height: 28px;
+  width: 29px;
+  height: 29px;
   border-radius: 40px;
   background-color: white;
   box-sizing: border-box;
   border: 1px solid #d1d1d1;
   top: 6px;
-  left: 1px;
+  left: 0;
 
   @media (min-width: @tablet-width) {
     width: 39px;
@@ -86,7 +86,7 @@
     box-sizing: border-box;
     border: 1px solid #bcbcbc;
     top: 6px;
-    left: 1px;
+    left: 0;
 
     @media (min-width: @tablet-width) {
       width: 39px;
@@ -108,7 +108,7 @@
     border-radius: 12px;
     background-color: @button-green;
     top: 14px;
-    left: 9px;
+    left: 8px;
 
     @media (min-width: @tablet-width) {
       width: 18px;
