--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -18,12 +18,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   @media (min-width: @desktop-width) {
+    min-height: 0;
     width: 1440px;
     padding: 0 110px;
+    padding-top: 54px;
+    padding-bottom: 50px;
   }
 }
 
