--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,7 +1,6 @@
 .page-form {
   width: 320px;
   margin: 0 auto;
-  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
     width: 768px;
@@ -26,16 +25,22 @@
   padding: 0 20px;
   padding-top: 15px;
   padding-bottom: 1;
+  width: 280px;
+  .ma;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
     padding-top: 31px;
     padding-left: 0;
+    padding-right: 0;
+    width: 708px;
   }
 
   @media (min-width: @desktop-width) {
     .mp;
-    padding-top: 17px;
+    padding-top: 12px;
+    .ma;
+    width: 1220px;
   }
 }
 
@@ -46,19 +51,23 @@
   font-size: 14px;
   line-height: 18px;
   .mp;
-  width: 229px;
-  padding: 0 20px;
+  width: 280px;
+  padding-right: 50px;
+  box-sizing: border-box;
   padding-top: 25px;
+  .ma;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    width: 330px;
     padding-top: 55px;
-    padding-left: 40px;
+    padding-right: 284px;
+    width: 628px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     padding-left: 0;
+    width:1220px;
+    padding-right: 895px;
   }
 }
