--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -1,13 +1,18 @@
 .product-description {
   padding: 0 20px;
   padding-bottom: 28px;
+  width: 280px;
+  .ma;
 
   @media (min-width: @tablet-width) {
+    width:708px;
     padding: 0 30px;
+
   }
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
+    width: 1220px;
   }
 }
 
@@ -75,7 +80,9 @@
   font-size: 36px;
   line-height: 50px;
   .mp;
-  padding-bottom: 27px;
+  padding-bottom: 28px;
+  padding-top: 2px;
+
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
