--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -16,6 +16,7 @@
 
 .page-catalog__wrapper {
   width: 320px;
+  margin: 0 auto;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
