--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -8,6 +8,12 @@
 
   @media (min-width: @tablet-width) {
     border: none;
+    margin-top: -5px;
+    padding-left: 4px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-left: 0;
   }
 }
 
