--- a/source/less/blocks/targets.less
+++ b/source/less/blocks/targets.less
@@ -1,14 +1,17 @@
 .targets {
+  width: 280px;
   padding: 0 20px;
-
+  .ma;
   @media (min-width: @tablet-width) {
-    padding: 0 30px;
+    width: 708px;
   }
 
   @media (min-width: @desktop-width) {
+    padding: 0;
+    width: 1220px;
     display: flex;
     justify-content: space-between;
-    padding: 0 110px;
+
     padding-top: 80px;
   }
 }
