--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -87,7 +87,7 @@
     }
     width: 552px;
     height: 499px;
-    margin-top: 142px;
+    margin-top: 140px;
     margin-left: 530px;
   }
 }
@@ -111,11 +111,12 @@
     padding-left: 86px;
     padding-top: 30px;
     text-indent: 0;
+    text-align: left;
   }
 
   @media (min-width: @desktop-width) {
     width: 440px;
-    padding-top: 224px;
+    padding-top: 221px;
     padding-left: 160px;
   }
 }
