--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -44,9 +44,9 @@
 
   @media (min-width: @desktop-width) {
     width: 1220px;
-    padding-left: 3px;
-    padding-top: 79px;
-    padding-bottom: 76px;
+    padding-left: 15px;
+    padding-top: 81px;
+    padding-bottom: 74px;
   }
 }
 
@@ -64,9 +64,10 @@
 
   @media (min-width: @desktop-width) {
     background-color: @bg-grey;
-    padding-top: 68px;
+    padding-top: 69px;
     width: 367px;
     padding-bottom: 0;
+    margin-left: 7px;
   }
 }
 
@@ -214,7 +215,15 @@
 
   @media (min-width: @desktop-width) {
     top: -190px;
-    left: -40px;
+    left: -30px;
+    width: 575px;
+    height: 485px;
+    background-image: url("../img/before-desktop@1x.png");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/before-desktop@2x.png");
+      background-size: cover;
+    }
   }
 }
 
@@ -248,7 +257,9 @@
 
   @media (min-width: @desktop-width) {
     top: -190px;
-    left: -42px;
+    left: -32px;
+    width: 690px;
+    height: 517px;
   }
 }
 
@@ -277,7 +288,7 @@
   @media (min-width: @desktop-width) {
     width: 435px;
     padding-top: 71px;
-    padding-left: 2px;
+    padding-left: 7px;
   }
 }
 
@@ -322,7 +333,8 @@
   @media (min-width: @desktop-width) {
     white-space: pre-wrap;
     width: 340px;
-    padding-top: 55px;
+    padding-top: 54px;
+    margin-left: -12px;
   }
 }
 
@@ -349,7 +361,7 @@
 }
 
 .example__slider-wrapper {
-  .ma;
+  margin-left: 63px;
   .uppercase;
   width: 198px;
   display: flex;
@@ -358,12 +370,14 @@
   padding-bottom: 35px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 367px;
+    padding-top: 366px;
     width: 570px;
+    margin-left: 67px;
+    padding-bottom: 37px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 38px;
+    margin-left: 47px;
   }
 }
 
@@ -376,7 +390,7 @@
   background-color: white;
   border: 1px solid #cdcdcd;
   border-radius: 6px;
-  margin-left: 3px;
+  margin-left: 6px;
 
   @media (min-width: @tablet-width) {
     border: none;
