--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -54,13 +54,13 @@
   line-height: 20px;
   .mp;
   width: 140px;
+  white-space: pre-wrap;
 
   @media (min-width: @tablet-width) {
     padding-left: 2px;
     font-size: 20px;
     line-height: 24px;
     width: 170px;
-    white-space: pre-wrap;
   }
 }
 
@@ -79,6 +79,7 @@
     width: 170px;
     white-space: pre-wrap;
     margin-top: -4px;
+    margin-right: 5px;
   }
 
   @media (min-width: @desktop-width) {
