правки по замечаниям

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -44,8 +44,8 @@
 
   @media (min-width: @desktop-width) {
     width: 1220px;
-    padding-left: 15px;
-    padding-top: 81px;
+    padding-left: 0px;
+    padding-top: 84px;
     padding-bottom: 74px;
   }
 }
@@ -67,7 +67,7 @@
     padding-top: 69px;
     width: 367px;
     padding-bottom: 0;
-    margin-left: 7px;
+    margin-left: 0;
   }
 }
 
@@ -109,7 +109,6 @@
 .example__center-cat-wrapper {
   background-color: @bg-grey;
   width: 320px;
-  padding: 0 20px;
   padding-top: 33px;
   .ma;
 
@@ -193,10 +192,12 @@
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/before-mobile@2x.png");
-    background-size: cover;
+    background-size: 320px 244px;
+
   }
   background-repeat: no-repeat;
   width: 320px;
+
 
   @media (min-width: @tablet-width) {
     position: absolute;
@@ -288,7 +289,7 @@
   @media (min-width: @desktop-width) {
     width: 435px;
     padding-top: 71px;
-    padding-left: 7px;
+    padding-left: 0;
   }
 }
 
@@ -377,7 +378,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 47px;
+    margin-left: 40px;
   }
 }
 
