--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -29,7 +29,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 56px;
+    margin-bottom: 58px;
     margin-right: 80px;
     min-height: 431px;
     width: 245px;
@@ -212,6 +212,11 @@
     width: 60px;
     height: 60px;
     margin-top: 55px;
+    margin-bottom: 49px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-top: 53px;
     margin-bottom: 49px;
   }
 }
