--- a/source/less/blocks/form-cat-info.less
+++ b/source/less/blocks/form-cat-info.less
@@ -3,7 +3,7 @@
   padding-bottom: 17px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 25px;
+    padding-top: 24px;
     border-bottom: none;
     padding-bottom: 62px;
     width: 708px;
@@ -12,6 +12,8 @@
 
   @media (min-width: @desktop-width) {
     width: 570px;
+    padding-bottom: 60px;
+    padding-top: 25px;
   }
 }
 
