--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -25,7 +25,7 @@
   @media (min-width: @desktop-width) {
     box-sizing: border-box;
     width: 618px;
-    padding: 0 40px;
+    padding: 0;
     padding-left: 38px;
     margin-left: -40px;
   }
@@ -51,7 +51,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 19px;
+    top: 21px;
   }
 }
 
@@ -67,7 +67,7 @@
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    padding-top: 63px;
+    padding-top: 64px;
     justify-content: space-between;
   }
 }
@@ -81,13 +81,24 @@
 
   @media (min-width: @tablet-width) {
     width: 638px;
-    padding-left: 10px;
+    padding-left: 7px;
     height: 72px;
   }
 
   @media (min-width: @desktop-width) {
     width: 572px;
     .mp;
+  }
+}
+
+.form-contacts__item:nth-child(2) sup{
+  @media (min-width: @tablet-width) {
+    display: block;
+    margin-right: -5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: -3px;
   }
 }
 
@@ -110,6 +121,11 @@
     margin-left: 20px;
     padding-left: 15px;
     height: 48px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-left: 22px;
+    padding-left: 14px;
   }
 }
 
@@ -159,12 +175,12 @@
 
   @media (min-width: @tablet-width) {
     padding-left: 20px;
-    background-position: 97% 53%;
+    background-position: 96.7% 53%;
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 15px;
-    background-position: 96% 53%;
+    padding-left: 17px;
+    background-position: 95.7% 53%;
   }
 }
 
