--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -10,7 +10,6 @@
   padding: 0 20px;
   display: block;
 
-
   @media (min-width: @tablet-width) {
     box-sizing: border-box;
     width: 768px;
@@ -24,8 +23,8 @@
 
   @media (min-width: @desktop-width) {
     min-height: 0;
-    width: 1440px;
-    padding: 0 110px;
+    width: 1300px;
+    padding: 0 40px;
     padding-top: 54px;
     padding-bottom: 50px;
   }
@@ -37,6 +36,7 @@
   background-image: url("../img/bg-map-mobile@1x.png");
   background-position: center;
   background-repeat: no-repeat;
+  background-color: #fdf7ee;
 
   @media (min-resolution: @retina-dpi),
     (min-resolution: @retina-dppx) {
@@ -61,7 +61,7 @@
     @media (min-resolution: @retina-dpi),
       (min-resolution: @retina-dppx) {
       background-image: url("../img/bg-map-desktop@2x.png");
-      background-size: 1440px 399px;
+      background-size: 1300px 399px;
     }
   }
 }
