--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -11,8 +11,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1440px;
-    padding: 0 110px;
+    width: 1300px;
+    padding: 0 40px;
     position: relative;
     z-index: 2;
   }
@@ -22,7 +22,9 @@
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
-  min-height: 66px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  min-height: 38px;
   align-items: center;
 
   @media (min-width: @tablet-width) {
@@ -35,6 +37,7 @@
   @media (min-width: @desktop-width) {
     min-height: 172px;
     margin: 0;
+    padding-top: 0;
   }
 }
 
