--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -122,6 +122,7 @@
   @media (min-width: @desktop-width) {
     .mp;
     padding: 0 40px;
+    padding-left: 38px;
     padding-top: 58px;
     padding-bottom: 30px;
     box-sizing: border-box;
@@ -192,7 +193,7 @@
     width: 282px;
     line-height: 52px;
     font-size: 20px;
-    margin-bottom: 73px;
+    margin-bottom: 74px;
   }
 
   @media (min-width: @desktop-width) {
@@ -211,7 +212,7 @@
   display: block;
   width: 157px;
   margin: 0 auto;
-  margin-top: 16px;
+  margin-top: 19px;
   padding-left: 2px;
   margin-bottom: 32px;
 
@@ -226,7 +227,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 58px;
+    margin-top: 62px;
     margin-left: 59px;
   }
 }
