--- a/source/less/blocks/table.less
+++ b/source/less/blocks/table.less
@@ -49,9 +49,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 285px;
+    width: 290px;
     border-bottom: none;
-    margin-top: 21px;
+    margin-top: 22px;
     margin-left: 36px;
   }
 }
@@ -60,7 +60,7 @@
   width: 87px;
 
   @media (min-width: @desktop-width) {
-    width: 44px;
+    width: 47px;
     border-bottom: none;
   }
 }
@@ -72,6 +72,7 @@
 }
 
 .table--addictional .table__column--left {
+  font-weight: 300;
   @media (min-width: @tablet-width) {
     text-align: right;
   }
