--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -32,7 +32,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 40px;
+    top: 39px;
     transform: translateX(-52%);
   }
 }
@@ -52,7 +52,8 @@
     margin: 0 auto;
     width: 708px;
     box-sizing: border-box;
-    padding: 27px 38px;
+    padding: 25px 38px;
+    padding-bottom: 29px;
     border: 1px solid #cdcdcd;
     display: flex;
     flex-wrap: wrap;
@@ -131,8 +132,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 40px;
-    padding-top: 19px;
+    padding-left: 39px;
+    padding-top: 17px;
     margin-left: -40px;
     padding-bottom: 82px;
   }
@@ -157,9 +158,10 @@
 
   @media (min-width: @desktop-width) {
     width: 245px;
-    line-height: 71px;
+    line-height: 68px;
     margin-bottom: 0;
     height: 71px;
+    padding-left: 2px;
   }
 }
 
@@ -183,7 +185,7 @@
   width: 280px;
   min-height: 290px;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
-
+  background-color: @button-green;
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
     background-size: 280px 290px;
@@ -202,7 +204,7 @@
     width: 708px;
     min-height: 199px;
     margin-top: 70px;
-    margin-bottom: 75px;
+    margin-bottom: 77px;
   }
 
   @media (min-width: @desktop-width) {
@@ -213,6 +215,7 @@
       background-image: url("../img/gift-photo-desktop@2x.jpg");
       background-size: 245px 289px;
     }
+    margin-top: -2px;
     width: 245px;
     min-height: 289px;
   }
@@ -235,7 +238,7 @@
     .mp;
     width: 161px;
     text-align: left;
-    padding-top: 74px;
+    padding-top: 73px;
     padding-left: 421px;
   }
 
