--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -8,15 +8,19 @@
 
   @media (min-width: @desktop-width) {
     background-color: @bg-grey;
+    margin: 0 auto;
+    min-width: 1300px;
   }
 }
 
 .example__caption-wrapper {
   background-color: @bg-grey;
+  min-width: 320px;
 
   @media (min-width: @tablet-width) {
     background-color: white;
     border-top: 2px solid #f2f2f2;
+    min-width: 768px;
   }
 
   @media (min-width: @tablet-width) {
@@ -36,7 +40,7 @@
   padding-bottom: 22px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 44px;
+    padding-top: 45px;
     padding-bottom: 64px;
     font-size: 60px;
     width: 708px;
@@ -45,7 +49,7 @@
   @media (min-width: @desktop-width) {
     width: 1220px;
     padding-left: 0px;
-    padding-top: 84px;
+    padding-top: 82px;
     padding-bottom: 74px;
   }
 }
@@ -57,7 +61,7 @@
   padding-top: 25px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 53px;
+    padding-top: 54px;
     background-color: white;
     padding-bottom: 254px;
   }
@@ -175,8 +179,8 @@
     line-height: 14px;
     width: 140px;
     white-space: nowrap;
-    top: 63px;
-    right: 9px;
+    top: 61px;
+    right: 10px;
   }
 
   @media (min-width: @desktop-width) {
@@ -192,7 +196,7 @@
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/before-mobile@2x.png");
-    background-size: 320px 244px;
+    background-size: 320px 240px;
 
   }
   background-repeat: no-repeat;
@@ -205,7 +209,7 @@
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/before-tablet@2x.png");
-      background-size: cover;
+      background-size: 690px 517px;
     }
     background-repeat: no-repeat;
     width: 636px;
@@ -216,14 +220,14 @@
 
   @media (min-width: @desktop-width) {
     top: -190px;
-    left: -30px;
+    left: -40px;
     width: 575px;
     height: 485px;
     background-image: url("../img/before-desktop@1x.png");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/before-desktop@2x.png");
-      background-size: cover;
+      background-size: 690px 517px;
     }
   }
 }
@@ -247,7 +251,7 @@
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/after-tablet@2x.png");
-      background-size: contain;
+      background-size: 690px 517px;
     }
     background-repeat: no-repeat;
     width: 636px;
@@ -258,7 +262,7 @@
 
   @media (min-width: @desktop-width) {
     top: -190px;
-    left: -32px;
+    left: -42px;
     width: 690px;
     height: 517px;
   }
@@ -371,9 +375,9 @@
   padding-bottom: 35px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 366px;
+    padding-top: 364px;
     width: 570px;
-    margin-left: 67px;
+    margin-left: 68px;
     padding-bottom: 37px;
   }
 
