--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -10,7 +10,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0 110px;
+    padding: 0 40px;
     width: 1220px;
   }
 }
@@ -46,7 +46,7 @@
     box-sizing: border-box;
     width: 324px;
     min-height: 285px;
-    margin-bottom: 33px;
+    margin-bottom: 32px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -104,7 +104,7 @@
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/advantage-leaf@2x.png");
-      background-size: 60%;
+      background-size: 50px 50px;
     }
     background-color: @button-green;
     background-position: center;
@@ -146,7 +146,7 @@
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/advantage-powder@2x.png");
-      background-size: 60%;
+      background-size: 50px 50px;
     }
     background-color: @button-green;
     background-position: center;
@@ -187,7 +187,7 @@
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/advantage-dining@2x.png");
-      background-size: 60%;
+      background-size: 50px 50px;
     }
     background-color: @button-green;
     background-position: center;
