--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -45,7 +45,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1440px;
+    min-width: 1300px;
     background-image: url("../img/index-desktop@1x.jpg");
     background-position: 50% 0;
     min-height: 696px;
@@ -87,8 +87,8 @@
     }
     width: 552px;
     height: 499px;
-    margin-top: 140px;
-    margin-left: 530px;
+    margin-top: 142px;
+    margin-left: 460px;
   }
 }
 
@@ -99,7 +99,7 @@
   line-height: 36px;
   width: 260px;
   .ma;
-  padding-top: 28px;
+  padding-top: 27px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
@@ -108,7 +108,7 @@
     color: black;
     width: 433px;
     margin: 0;
-    padding-left: 86px;
+    padding-left: 87px;
     padding-top: 30px;
     text-indent: 0;
     text-align: left;
@@ -116,8 +116,8 @@
 
   @media (min-width: @desktop-width) {
     width: 440px;
-    padding-top: 221px;
-    padding-left: 160px;
+    padding-top: 223px;
+    padding-left: 90px;
   }
 }
 
@@ -143,8 +143,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 39px;
-    padding-left: 155px;
+    padding-top: 41px;
+    padding-left: 84px;
   }
 }
 
@@ -177,11 +177,11 @@
     line-height: 52px;
     font-size: 20px;
     margin-top: 43px;
-    margin-left: 88px;
+    margin-left: 89px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 53px;
-    margin-left: 159px;
+    margin-top: 51px;
+    margin-left: 89px;
   }
 }
