--- a/source/less/blocks/targets.less
+++ b/source/less/blocks/targets.less
@@ -86,7 +86,7 @@
   }
 }
 
-.targets__button {
+.targets__button--slim {
   position: relative;
   display: block;
   .regular;
@@ -185,6 +185,107 @@
     opacity: 0.6;
   }
 }
+
+.targets__button--mass {
+  position: relative;
+  display: block;
+  .regular;
+  color: black;
+  .uppercase;
+  text-decoration: none;
+  margin-left: 20px;
+  padding-top: 19px;
+  font-size: 16px;
+  line-height: 16px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    background-image: url("../img/icon-right-arrow-long.svg");
+    width: 24px;
+    height: 11px;
+    background-repeat: no-repeat;
+    left: 97px;
+    top: 21px;
+  }
+
+  &:hover {
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/icon-right-arrow-verylong.svg");
+      width: 32px;
+      height: 11px;
+      background-repeat: no-repeat;
+      left: 97px;
+      top: 21px;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    .mp;
+    padding-top: 56px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/icon-right-arrow-long.svg");
+      width: 24px;
+      height: 11px;
+      background-repeat: no-repeat;
+      left: 125px;
+      top: 61px;
+    }
+
+    &:hover {
+      &::before {
+        position: absolute;
+        content: "";
+        background-image: url("../img/icon-right-arrow-verylong.svg");
+        width: 32px;
+        height: 11px;
+        background-repeat: no-repeat;
+        left: 125px;
+        top: 61px;
+      }
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 32px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/icon-right-arrow-long.svg");
+      width: 24px;
+      height: 11px;
+      background-repeat: no-repeat;
+      left: 125px;
+      top: 35px;
+    }
+
+    &:hover {
+      &::before {
+        position: absolute;
+        content: "";
+        background-image: url("../img/icon-right-arrow-verylong.svg");
+        width: 32px;
+        height: 11px;
+        background-repeat: no-repeat;
+        left: 125px;
+        top: 35px;
+      }
+    }
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
 
 .targets__title--slim {
   &::before {
