--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -48,7 +48,7 @@
 
   @media (min-width: @desktop-width) {
     width: 1220px;
-    padding-left: 0px;
+    padding-left: 0;
     padding-top: 82px;
     padding-bottom: 74px;
   }
@@ -197,7 +197,6 @@
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/before-mobile@2x.png");
     background-size: 320px 240px;
-
   }
   background-repeat: no-repeat;
   width: 320px;
